--- a/index.html
+++ b/index.html
@@ -539,7 +539,7 @@ h1 {
   </main>
 
   <footer>
-    &copy; 2025 StocktonCalifornia.net — Built with good vibes and local love.
+    &copy; 2025 StocktonCalifornia.net — Built with good vibes and local love. | <a href="/privacy/" title="Privacy Policy" style="color: #778899;">Privacy</a>
   </footer>
 
 </body>
